test/SPI/implementation_only_spi_import.code
/// @_implementationOnly imports should be compatible with @_spi imports

// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -DLIB_A %s -module-name A -emit-module-path %t/A.codemodule
// RUN: %target-language-frontend -emit-module -DLIB_B %s -module-name B -emit-module-path %t/B.codemodule -I %t
// RUN: rm %t/A.codemodule
// RUN: %target-language-frontend -typecheck -verify -DLIB_C %s -I %t

#if LIB_A

@_spi(A) public fn foo() {}

#elseif LIB_B

@_spi(A) @_implementationOnly import A
foo() // OK

#elseif LIB_C

import B
foo() // expected-error{{cannot find 'foo' in scope}}

#endif
